portable: overflow//scrolling issue solved

--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@ a {
   text-decoration: none;
   color: blue;
 }
-body {
+/* body {
   overflow: hidden;
-}
+} */
 /* font-family: "Lato", sans-serif; */
 /* font-family: "Quicksand", sans-serif; */
 /* font-family: "Fira Code", monospace; */
@@ -39,7 +39,6 @@ body {
 /* header css starts here  */
 #home {
   background: linear-gradient(to top, #0e2016 40%, #000000 100%);
-  /* height: 993px; */
 }
 #home .header {
   display: flex;
@@ -197,7 +196,28 @@ body {
 #home .code_runner {
   font-family: "Fira Code", monospace;
   opacity: 0.6;
-  margin-bottom: 39px;
+  /* margin-bottom: 39px; */
+}
+#home .code_runner p {
+  text-align: justify;
+}
+#home .code_runner .blue {
+  color: var(--code-color-blue);
+}
+#home .code_runner .white {
+  color: var(--code-color-white);
+}
+#home .code_runner .green {
+  color: var(--code-color-green);
+}
+#home .code_runner .red {
+  color: var(--code-color-red);
+}
+#home .code_runner .pink {
+  color: var(--code-color-pink);
+}
+#home .code_runner .gold {
+  color: var(--code-color-gold);
 }
 #home .code_runner .road_one {
   position: relative;
@@ -221,12 +241,9 @@ body {
 #home .code_runner .road_one .item {
   width: 34%;
   height: 100px;
-  /* background-color: var(--base-bg); */
-  /* background-color: red; */
   color: var(--white-text);
   border-radius: 6px;
   position: absolute;
-  /* left: -200px; */
   right: 100%;
   animation-name: scrollRight;
   animation-duration: 39s;
@@ -268,7 +285,6 @@ body {
 }
 
 #home .code_runner .road_two .item {
-  /* background-color: var(--base-bg); */
   width: 26%;
   height: 100px;
   color: var(--white-text);
@@ -344,35 +360,6 @@ body {
   animation-delay: calc(23s / 4 * (4 - 4) * -1);
 }
 
-/* #home .code_runner #property{
-  color: var(--white-text);
-  margin-left: 26px;
-}
-#home .code_runner #value{
-  color: var(--gold-bg);
-} */
-#home .code_runner p {
-  text-align: justify;
-}
-
-#home .code_runner .blue {
-  color: var(--code-color-blue);
-}
-#home .code_runner .white {
-  color: var(--code-color-white);
-}
-#home .code_runner .green {
-  color: var(--code-color-green);
-}
-#home .code_runner .red {
-  color: var(--code-color-red);
-}
-#home .code_runner .pink {
-  color: var(--code-color-pink);
-}
-#home .code_runner .gold {
-  color: var(--code-color-gold);
-}
 
 /* code_runner css ends here  */
 
